gh-227: Fix navigation expand and collapse

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -32,3 +32,8 @@ $alert-border-width: 0px !default;
 hr {
   margin: 12px 0px 0px 5px;
 }
+
+.collapsed > .when-open,
+.not-collapsed > .when-closed {
+  display: none;
+}
